2014-04-05      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2GenGCC.mod:  (CodeInitAddress)  New procedure.
	  (CodeStatement) added case clause for InitAddressOp which calls
	  CodeInitAddress.
	* gm2/gm2-compiler/M2Quads.def:  added InitAddressOp.
	* gm2/gm2-compiler/M2Quads.mod:  (CheckVariableAt)  generate
	  an InitAddressOp instead of CodeBecomesOp.  (WriteQuad)
	  new case clause for InitAddressOp.  (WriteOperands) new case
	  clause for InitAddressOp.
	* fixes variable at address bugs (see
	  testsuite/gm2/embedded/pass/varataddress2.mod)

2014-03-19      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-gcc/m2except.c:  (do_call3) corrected number of parameters.
	  (build_exc_ptr) add assertion.  (gm2_build_throw) add location.
	* gm2/tools-src/createUlmSys:  improved error message.
	* libgm2/Makefile.in:  build and install the Ulm libraries.
	  Included $(GM2_OBJ)/gm2-libs/gm2-libs-target.h as a dependant
	  to $(GM2_OBJ)/ulm-lib-gm2/sys/SYSTEM.c.

2014-03-18      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-gcc/m2except.c:  do_call0 (New function).
	  do_call1 (New function).  do_call3 (New function).
	  build_exc_ptr (rewritten to use do_call1).
	  do_free_exception (rewritten to use do_call1).
	  do_throw (rewritten to use do_call3).
	  do_rethrow (rewritten to use do_call0).
          gm2_build_throw (removed unused local variables).
	  do_begin_catch (rewritten to use do_call1).
	  do_end_catch (rewritten to use do_call0).
	* gm2/gm2-lang.c:  genericize_try_block (New function).
	  genericize_catch_block (New function).
	  gm2_langhook_gimplify_expr call genericize_try_block
	  and genericize_catch_block.

2014-03-12      Gaius Mulley <gaius@gnu.org>

	* changed persmissions to most files to remove the execute
          bit.

2014-03-12      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  fixed verify flags for gm2.verifyparanoid
	  and gm2.verifystage12.
	* gm2/gm2-libs-iso/M2RTS.mod:  detect double HALT and exit with
	  -1.